third_party/rust/cxx/v1/crate/tests/ui/slice_of_type_alias.stderr
error[E0271]: type mismatch resolving `<ElementOpaque as ExternType>::Kind == Trivial`
   --> tests/ui/slice_of_type_alias.rs:13:9
    |
13  |         type ElementOpaque = crate::ElementOpaque;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected enum `Trivial`, found enum `cxx::kind::Opaque`
    |
note: required by a bound in `verify_extern_kind`
   --> src/extern_type.rs
    |
    | pub fn verify_extern_kind<T: ExternType<Kind = Kind>, Kind: self::Kind>() {}
    |                                         ^^^^^^^^^^^ required by this bound in `verify_extern_kind`
